# aisearch

./: .gitignore  README.md  conftest.py  pyproject.toml  pytest.ini
.claude/: CONTEXT.md
aisearch/: __init__.py  bandit.py  clients.py  config.py  council.py  judge.py  refine.py  search.py
examples/: cli_real_run.py
experiments/q3_council_precision/: __init__.py  run.py
experiments/q6_goodhart/: __init__.py  measure_axes.py  measure_constraint.py  measure_real_judge.py  run.py  test_q6.py
tests/: test_bandit.py  test_council.py  test_foundation.py  test_integration.py  test_refine.py  test_search.py
